2004-02-19 Alasdair Allan <aa@astro.ex.ac.uk>

        * Got ping() and echo() working for wfcam_agent.pl. Fixed the breaks
	  in encapsulation present from the 2nd generation code by making 
	  eSTAR::Process and eSTAR::Logging single instance objects.

        * Added a data mining process, carbon copy of the wfcam_agant.pl
	  code with configurations changed. Need to find some way to grab
	  some meta-classes from this so that the 4th generation stuff can
	  actually be easier to write than is currently the case.
	
	* Added a client to generate a VOTable catalogue for a given radius
	  around a given target. Used for deubgging and development of the
	  WFCAM agent and Data Mining Daemon.
	    	  
2004-02-18 Alasdair Allan <aa@astro.ex.ac.uk>

        * Inital skeleton installation of the WFCAM survey_agent.pl 
          built. This package is going to be the first 3rd generation
          agent built for the eSTAR project. Initally it should talk
          to the current user_agent.pl and the rest of the 2nd generation
          code, but if Robonet-1.0 goes ahead we'll need to refactor
          the top level User Agent code as it's not robust enough for
          general distribution to astronomers.
          