@@ -12,7 +12,10 @@
 	* Added a client to generate a VOTable catalogue for a given radius
 	  around a given target. Used for deubgging and development of the
 	  WFCAM agent and Data Mining Daemon.
-	    	  
+	
+	* Default options are now generated on first program run only, and
+	  the SOAP server has get and set methods exposed to change these.
+	      	  
 2004-02-18 Alasdair Allan <aa@astro.ex.ac.uk>
 
         * Inital skeleton installation of the WFCAM survey_agent.pl 
